# BCD-0o27-Tetris

./: .gitignore  .gitmodules  README.md
documentation/: Development Guide.md  Hardware Assembly Guide.md  Hardware Design.md  Software Development Guide.md  User Guide.md
firmware/example/: CMakeLists.txt  platformio.ini  sdkconfig.BCD-0o27-5KY  sdkconfig.BCD-0o27-5KY-release
firmware/example/boards/: BCD-0o26-34R7.json
firmware/example/components/bcd_hw_capabilities/: CMakeLists.txt  Kconfig
firmware/example/components/bcd_hw_capabilities/src/: hw_capabilities.cpp
firmware/example/fonts/: Bm437_ACM_VGA_9x16.h
firmware/example/src/: Kconfig.projbuild  main.cpp  main.h  main.hpp
firmware/framework/: .gitignore  CMakeLists.txt  LICENSE.md  kopiraj_binary.sh  output.txt  partitions.csv  platformio.ini  sdkconfig.BCD-0o26-34R7  sdkconfig.BCD-0o27-5KY  sdkconfig.BCD-0o27-5KY-release
firmware/framework/boards/: BCD-0o27-5KY.json
firmware/framework/fonts/: Bm437_ATI_9x16.h
firmware/framework/src/: CMakeLists.txt  Kconfig.projbuild  board.cpp  board.h  gameStates.cpp  graphics.cpp  main.cpp  main.h  main.hpp  notes.txt
hardware/BCD-0o27/: BCD-0o27.kicad_pcb  BCD-0o27.kicad_prl  BCD-0o27.kicad_pro  BCD-0o27.kicad_sch  BCD-0o27.pro  BCD-0o27.sch  BCD-0o27.xml  connectors.kicad_sch  connectors.sch  controls.kicad_sch  controls.sch  display.kicad_sch  display.sch  ext_if.kicad_sch  ext_if.sch  fp-lib-table  led_com.kicad_sch  led_com.sch  power_supply.kicad_sch  power_supply.sch  serial.kicad_sch  serial.sch  sym-lib-table  usb.sch
(+81 files in other folders)
